fix input-wrap

--- a/css/styles.css
+++ b/css/styles.css
@@ -782,6 +782,7 @@ img {
 .btn-close:focus {
 	fill: var(--accent-color);
 }
+/* ---------- form ---------- */
 
 .modal-title {
 	margin-bottom: 12px;
@@ -804,21 +805,6 @@ img {
 	margin-bottom: 10px;
 }
 
-.input-field {
-	display: flex;
-	align-items: center;
-	position: relative;
-	cursor: pointer;
-
-	transition: fill var(--transition-duration) var(--transition-timing-function);
-}
-
-.modal-icon {
-	position: absolute;
-	left: 12px;
-	top: 50%;
-	transform: translateY(-50%);
-}
 .modal-label {
 	margin-bottom: 4px;
 	font-weight: 400;
@@ -831,6 +817,15 @@ img {
 	cursor: pointer;
 }
 
+.input-wrap {
+	display: flex;
+	align-items: center;
+	position: relative;
+	cursor: pointer;
+
+	transition: fill var(--transition-duration) var(--transition-timing-function);
+}
+
 .modal-input {
 	width: 100%;
 	height: 40px;
@@ -838,15 +833,9 @@ img {
 	border: 1px solid rgba(33, 33, 33, 0.2);
 	border-radius: 4px;
 	outline: transparent;
-	font-size: 100%;
 	cursor: pointer;
 
 	transition: border-color var(--transition-duration) var(--transition-timing-function);
-}
-
-.input-field:hover,
-.input-field:focus-within {
-	fill: var(--accent-color);
 }
 
 .modal-input:hover,
@@ -854,6 +843,20 @@ img {
 .modal-textarea:hover,
 .modal-textarea:focus {
 	border-color: var(--accent-color);
+}
+
+.modal-icon {
+	position: absolute;
+	left: 12px;
+	top: 50%;
+	transform: translateY(-50%);
+
+	transition: fill var(--transition-duration) var(--transition-timing-function);
+}
+
+.modal-input:hover + .modal-icon,
+.modal-input:focus + .modal-icon {
+	fill: var(--accent-color);
 }
 
 .textarea-field {
@@ -869,11 +872,11 @@ img {
 	border-radius: 4px;
 	outline: transparent;
 
-	font-weight: 400;
 	font-size: 12px;
 	line-height: 1.17;
 	letter-spacing: 0.01em;
 	resize: none;
+
 	cursor: pointer;
 
 	transition: border-color var(--transition-duration) var(--transition-timing-function);
